--- a/index.jinja
+++ b/index.jinja
@@ -18,9 +18,9 @@
         <p class="card-title">{{name}}</p>
         <img src="results/{{subdir}}/{{name}}.png" alt="Map thumbnail for {{name}}">
         <div class="card-links flex space-around">
-            <a href="https://dcb.lu/met_src_results/{{subdir}}/{{name}}.zip">Shapefile</a>
-            <a href="https://dcb.lu/met_src_results/{{subdir}}/{{name}}.png">PNG</a>
-            <a href="https://dcb.lu/met_src_results/{{subdir}}/{{name}}.json">GeoJSON</a>
+            <a href="results/{{subdir}}/{{name}}.zip">Shapefile</a>
+            <a href="results/{{subdir}}/{{name}}.png">PNG</a>
+            <a href="results/{{subdir}}/{{name}}.json">GeoJSON</a>
         </div>
     </div>
     {%- endmacro -%}
