add thumbnail images to reduce load time

--- a/index.jinja
+++ b/index.jinja
@@ -16,7 +16,7 @@
     {%- macro card(name, subdir) -%}
     <div class="card">
         <p class="card-title">{{name}}</p>
-        <img src="results/{{subdir}}/{{name}}.png" alt="Map thumbnail for {{name}}">
+        <img src="thumbnails/{{subdir}}/{{name}}.jpg" alt="Map thumbnail for {{name}}">
         <div class="card-links flex space-around">
             <a href="results/{{subdir}}/{{name}}.zip">Shapefile</a>
             <a href="results/{{subdir}}/{{name}}.png">PNG</a>
