--- a/style.css
+++ b/style.css
@@ -97,13 +97,13 @@ img {
     margin-block: 0.4rem;
 }
 
-@media (max-width: 55rem) {
+@media (max-width: 50rem) {
     .grid {
         grid-template-columns: 1fr 1fr;
     }
 }
 
-@media (max-width: 32rem) {
+@media (max-width: 36mmrem) {
     .grid {
         grid-template-columns: 1fr;
     }
