update url to source code

--- a/index.jinja
+++ b/index.jinja
@@ -43,7 +43,7 @@
     <div class="project-description">
         <p>
             A repository for the <a href="https://sservi.directus.app/assets/2483b7e0-a336-443d-8739-3d5f4756e1fb.pdf#page=33">results presented</a> at the <a href="https://sservi.nasa.gov/els2023/">European Lunar Symposium</a> on June 28, 2023.
-            Details on these files and the code used to generate them can be found on <a href="https://github.com/danielbolan/met_src">GitHub.</a>
+            Details on these files and the code used to generate them can be found on <a href="https://github.com/danielbolan/met-src">GitHub.</a>
         </p>
     </div>
 
